# multimodal-rag-spike

./: .gitignore  LICENSE  README.md  create-complex-pdf.ipynb  docintel.ipynb  docling.ipynb  experiment_structure_vs_unstructured.ipynb  llamaparse.ipynb  marker.ipynb  pyproject.toml  textract.ipynb
