[tool.poetry]
name = "multimodal-rag"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
azure-ai-documentintelligence = "^1.0.0"
ipykernel = "^6.29.5"
langgraph = "^0.2.73"
langchain-community = "^0.3.17"
tiktoken = "^0.9.0"
langchain-openai = "^0.3.6"
langchain-chroma = "^0.2.2"
pillow = "^10.4.0"
amazon-textract-textractor = {extras = ["pdfium"], version = "^1.8.5"}
pandas = "^2.2.3"
ragas = "^0.2.13"
pydantic = "^2.10.6"
pymupdf4llm = "^0.0.17"
rapidfuzz = "^3.12.1"
pypdf = "^5.3.0"
langchain-docling = "^0.2.0"
langchain-experimental = "^0.3.4"
marker-pdf = "^1.5.5"
llama-cloud-services = "^0.6.1"
llama-index-core = "^0.12.19"
llama-index-readers-file = "^0.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
